# context-file-concat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_NEW.md  THIRD_PARTY_LICENSES.md  ___refactor.sh  blabla.json  cfc-config.json  context-file-concat-config.json  create_project_tree.sh  output.txt  setup-coverage-hardening.sh
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
assets/icons/: icon.icns
docs/: README.md  architecture.md  ci-budgets.md  ipc.md  virtualization.md
scripts/: generate-icons.sh  release.sh  setup-trace-contrast.sh
src/: lib.rs  main.rs  web_assets.rs
src/app/: commands.rs  events.rs  file_dialog.rs  filtering.rs  helpers.rs  main_window.rs  mod.rs  proxy.rs  state.rs  tasks.rs  view_model.rs
src/config/: mod.rs  settings.rs
src/core/: error.rs  file_handler.rs  ignore.rs  mod.rs  scanner.rs  search.rs  tree_generator.rs
src/core/snapshots/: context_file_concat__core__file_handler__tests__concatenated_content_absolute_no_tree.snap  context_file_concat__core__file_handler__tests__concatenated_content_handles_empty_selection.snap  context_file_concat__core__file_handler__tests__concatenated_content_handles_file_without_final_newline.snap  context_file_concat__core__file_handler__tests__concatenated_content_handles_root_path_without_parent.snap  context_file_concat__core__file_handler__tests__concatenated_content_handles_special_path_characters.snap  context_file_concat__core__file_handler__tests__concatenated_content_relative_with_tree.snap  context_file_concat__core__file_handler__tests__concatenated_content_skips_directories_in_selection.snap  context_file_concat__core__file_handler__tests__concatenated_content_with_tree_ignores.snap  context_file_concat__core__file_handler__tests__content_reading_edge_cases.snap  context_file_concat__core__file_handler__tests__get_preview_handles_corrupted_line.snap  context_file_concat__core__tree_generator__tests__basic_tree_generation.snap  context_file_concat__core__tree_generator__tests__realistic_project_structure_with_ignores.snap
src/platform/: macos.rs  mod.rs
src/platform/macos/: menu.rs
src/ui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  script.js  style.css  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts  vitest.full.config.ts
src/ui/e2e/: a11y-contrast.spec.ts  benchmarks.spec.ts  budgets.spec.ts  flows.spec.ts
src/ui/js/: config.js  dom.js  main.js  state.js  utils.js
src/ui/js/modules/: clipboard.js  commands.js  editor.js  eventListeners.js  keyboard.js  renderer.js  resizer.js
src/ui/js/services/: backend.js
src/ui/scripts/: check-budgets.mjs
src/ui/src/: App.svelte  app.d.ts  main.ts
src/ui/src/lib/: config.ts  dom.ts  main.ts  types.ts  utils.ts
src/ui/src/lib/actions/: resizer.ts
src/ui/src/lib/components/: FileTree.svelte  Footer.svelte  Header.svelte  LinearProgress.svelte  LocaleToggle.svelte  LogoMark.svelte  PreviewPanel.svelte  ResizerMount.svelte  Sidebar.svelte  Skeleton.svelte  Spinner.svelte  StatusBar.svelte  ThemeToggle.svelte  ToastHost.svelte  TreeItem.svelte
src/ui/src/lib/design/: tokens.css  utilities.css
src/ui/src/lib/design/themes/: dark.css
src/ui/src/lib/dev/: budget.ts  e2eBridge.ts  e2eShim.ts  idle.ts
src/ui/src/lib/i18n/: index.ts
src/ui/src/lib/ipc/: handlers.ts  schema.ts
src/ui/src/lib/modules/: actions.ts  clipboard.ts  commands.ts  editor.ts  eventListeners.ts  keyboard.ts  renderer.ts  resizer.ts  treeExpansion.ts  undo.ts
src/ui/src/lib/services/: backend.ts
src/ui/src/lib/stores/: app.ts  preview.ts  theme.ts  toast.ts  uiStores.ts
src/ui/src/tests/: FileTree.test.ts  PreviewPanel.test.ts  setup.ts  treeExpansion.test.ts  utils.test.ts
src/ui/src/tests/__mocks__/: monaco-editor.ts
src/ui/src/tests/contracts/: factories.ts  helpers.ts  ipc-commands.test.ts  ipc-contracts.test.ts  ipc-properties.tst.ts  schema-snapshot.test.ts
src/ui/src/tests/ipc/: handlers.behaviour.test.ts  handlers.test.ts  handlers.validation.test.ts
src/ui/src/tests/modules/: clipboard.editor.test.ts  clipboard.fallbacks.test.ts  clipboard.test.ts  commands.test.ts  i18n.test.ts  keyboard.test.ts  toast.test.ts  undo.test.ts
src/ui/src/tests/stores/: app.test.ts
src/utils/: file_detection.rs  mod.rs  test_helpers.rs
tests/: integration_tests.rs
