[package]
name = "context-file-concat"
version = "0.2.0"
edition = "2021"
description = "Context File Concatenator - Intelligently select, filter, and combine project files for LLM context"
authors = ["src dbgr"]
license = "MIT"
repository = "https://github.com/src-dbgr/context-file-concat"
homepage = "https://github.com/src-dbgr/context-file-concat"
keywords = ["llm", "context", "files", "concatenation", "development"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Web-View Architecture
wry = "0.37"
tao = "0.26"

# Core Logic & Utilities
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
dirs = "6.0"
directories = "6.0"
rayon = "1.10"
tree_magic_mini = "3.2"
camino = "1.1"
regex = "1.1"
thiserror = "2.0"
tempfile = "3.20"
tiktoken-rs = "0.7"
async-trait = "0.1"

[dev-dependencies]
insta = { version = "1.43", features = ["redactions", "filters"] }
proptest = "1.7"
tempfile = "3.20"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
serial_test = "3.2"
libc = "0.2"

# macOS-only: thin, scoped integration helpers (no objc macros in our code)
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# For better Performance in Release-Build
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Remove debug symbols for smaller binaries

# BUNDLE INFORMATION
[package.metadata.bundle]
name = "Context File Concatenator"
identifier = "io.devsam.contextfileconcat"
version = "0.2.0"
short_description = "Context File Concatenator for LLMs"
long_description = "A desktop application to intelligently select, filter, and combine project files into a single text file optimized for Large Language Models."
icon = ["assets/icons/icon.icns"]  # macOS
resources = ["assets/icons/"]
category = "DeveloperTool"
copyright = "Copyright © 2025 src-dbgr. All rights reserved."

# macOS specific settings
[package.metadata.bundle.osx]
minimum_system_version = "10.15"
frameworks = ["WebKit"]
info_plist_path = "assets/Info.plist"

# Windows specific settings
[package.metadata.bundle.windows]
wix_language = "en-US"
wix_template = "assets/main.wxs"

# Linux specific settings
[package.metadata.bundle.linux]
depends = ["libwebkit2gtk-4.1-dev", "libgtk-3-0"]